package com.se24.smartvehiclebooking.payment;


class UPIPayment extends PaymentMethod {
    // constructor
    public UPIPayment() {
    }

    @Override
    public void processPayment(double amount, ) {
        // Implement the payment logic specific to UPIPayment
        
    }


}