package com.se24.smartvehiclebooking.payment;


class CardPayment extends PaymentMethod {
    // constructor
    public CardPayment() {
    }

    @Override
    public void processPayment(double amount, ) {
        // Implement the payment logic specific to CardPayment
        
    }


}